--- a/assignment1_2020_template.ipynb
+++ b/assignment1_2020_template.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,113 +110,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'unacc': 0.7002314814814815,\n",
-       "  'acc': 0.2222222222222222,\n",
-       "  'vgood': 0.03761574074074074,\n",
-       "  'good': 0.03993055555555555},\n",
-       " {'unacc': {0: {'vhigh': 0.2975206611570248,\n",
-       "    'high': 0.26776859504132233,\n",
-       "    'med': 0.22148760330578512,\n",
-       "    'low': 0.21322314049586777},\n",
-       "   1: {'vhigh': 0.2975206611570248,\n",
-       "    'high': 0.25950413223140495,\n",
-       "    'med': 0.22148760330578512,\n",
-       "    'low': 0.22148760330578512},\n",
-       "   2: {'2': 0.2694214876033058,\n",
-       "    '3': 0.24793388429752067,\n",
-       "    '4': 0.2413223140495868,\n",
-       "    '5more': 0.2413223140495868},\n",
-       "   3: {'2': 0.47603305785123967,\n",
-       "    '4': 0.2578512396694215,\n",
-       "    'more': 0.26611570247933886},\n",
-       "   4: {'small': 0.371900826446281,\n",
-       "    'med': 0.3239669421487603,\n",
-       "    'big': 0.30413223140495865},\n",
-       "   5: {'low': 0.47603305785123967,\n",
-       "    'med': 0.2950413223140496,\n",
-       "    'high': 0.22892561983471074}},\n",
-       "  'acc': {0: {'vhigh': 0.1875,\n",
-       "    'high': 0.28125,\n",
-       "    'med': 0.2994791666666667,\n",
-       "    'low': 0.23177083333333334},\n",
-       "   1: {'med': 0.2994791666666667,\n",
-       "    'low': 0.23958333333333334,\n",
-       "    'high': 0.2734375,\n",
-       "    'vhigh': 0.1875},\n",
-       "   2: {'2': 0.2109375, '3': 0.2578125, '4': 0.265625, '5more': 0.265625},\n",
-       "   3: {'4': 0.515625, 'more': 0.484375},\n",
-       "   4: {'small': 0.2734375, 'med': 0.3515625, 'big': 0.375},\n",
-       "   5: {'high': 0.53125, 'med': 0.46875}},\n",
-       "  'vgood': {0: {'med': 0.4, 'low': 0.6},\n",
-       "   1: {'med': 0.4, 'low': 0.4, 'high': 0.2},\n",
-       "   2: {'2': 0.15384615384615385,\n",
-       "    '3': 0.23076923076923078,\n",
-       "    '4': 0.3076923076923077,\n",
-       "    '5more': 0.3076923076923077},\n",
-       "   3: {'4': 0.46153846153846156, 'more': 0.5384615384615384},\n",
-       "   4: {'big': 0.6153846153846154, 'med': 0.38461538461538464},\n",
-       "   5: {'high': 1.0}},\n",
-       "  'good': {0: {'med': 0.3333333333333333, 'low': 0.6666666666666666},\n",
-       "   1: {'low': 0.6666666666666666, 'med': 0.3333333333333333},\n",
-       "   2: {'2': 0.21739130434782608,\n",
-       "    '3': 0.2608695652173913,\n",
-       "    '4': 0.2608695652173913,\n",
-       "    '5more': 0.2608695652173913},\n",
-       "   3: {'4': 0.5217391304347826, 'more': 0.4782608695652174},\n",
-       "   4: {'small': 0.30434782608695654,\n",
-       "    'med': 0.34782608695652173,\n",
-       "    'big': 0.34782608695652173},\n",
-       "   5: {'high': 0.43478260869565216, 'med': 0.5652173913043478}}})"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This function should calculat prior probabilities and likelihoods from the training data and using\n",
     "# them to build a naive Bayes model\n",
     "\n",
     "def train(data):\n",
-    "    return (prior_func(data),posterior_func(data))\n",
-    "train(preprocess('car.data',7,'none'))\n"
+    "    return (prior_func(data),posterior_func(data))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 133,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This function should predict classes for new items in a test dataset (for the purposes of this assignment, you\n",
     "# can re-use the training data as a test set)\n",
+    "def predict(preprocessed_data, trained_set):\n",
+    "    \n",
+    "    prior_prob, post_prob= trained_set[0], trained_set[1]\n",
+    "    length= len(preprocessed_data)\n",
+    "    predicted_class=[]\n",
+    "    for row in preprocessed_data:\n",
+    "        prediction ={}\n",
+    "        for a, b in prior_prob.items():\n",
+    "            prediction[a]=b\n",
+    "            for i in range(len(row)-1):\n",
+    "                if row[i] in post_prob[a][i]:\n",
+    "                    prediction[a] =prediction[a]* post_prob[a][i][row[i]]\n",
+    "                else:\n",
+    "                    prediction[a]= prediction[a]*0.01\n",
+    "                    prediction[a]= prediction[a]/length\n",
+    "        max_key = max(prediction, key=prediction.get)\n",
+    "        predicted_class.append(max_key)\n",
+    "    \n",
+    "    return predicted_class\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92.33814779589038"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This function should evaliate the prediction performance by comparing your model’s class outputs to ground\n",
+    "# truth labels\n",
     "\n",
-    "def predict():\n",
-    "    return"
+    "def evaluate(filename, classcolumn,id_code):\n",
+    "    preprocessed_data=preprocess(filename, classcolumn,id_code)\n",
+    "    trained_set=train(preprocessed_data)\n",
+    "    total=0\n",
+    "    predict1=predict(preprocessed_data, trained_set)\n",
+    "    count=len(preprocessed_data)\n",
+    "    \n",
+    "    for a in range(count):\n",
+    "        if  preprocessed_data[a][-1]== predict1[a]:\n",
+    "            total=total+1\n",
+    "    \n",
+    "    \n",
+    "    accuracy= total/count\n",
+    "    \n",
+    "    \n",
+    "    return accuracy*100\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98.14020028612303\n",
+      "99.1506646971935\n",
+      "89.1891891891892\n",
+      "100.0\n",
+      "87.38425925925925\n",
+      "90.30864197530865\n",
+      "67.13286713286713\n"
+     ]
+    }
+   ],
    "source": [
-    "# This function should evaliate the prediction performance by comparing your model’s class outputs to ground\n",
-    "# truth labels\n",
+    "list_datasets=[[\"breast-cancer-wisconsin.data\",11,1],[\"mushroom.data\",1,\"none\"],[\"lymphography.data\",1,\"none\"],\n",
+    "               [\"wine.data\",1,\"none\"],[\"car.data\",7,\"none\"],[\"nursery.data\",9,\"none\"],[\"somerville.data\",1,\"none\"],\n",
+    "               [\"adult.data\",15,\"none\"],[\"bank.data\",15,\"none\"],[\"university.data\",1,1]]\n",
     "\n",
-    "def evaluate():\n",
-    "    return"
+    "for a in range(len(list_datasets)):\n",
+    "    print(evaluate(list_datasets[a][0],list_datasets[a][1],list_datasets[a][2]))\n",
+    "    "
    ]
   },
   {
