--- a/assignment1_2020_template.ipynb
+++ b/assignment1_2020_template.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This function should predict classes for new items in a test dataset (for the purposes of this assignment, you\n",
     "# can re-use the training data as a test set)\n",
     "def predict(preprocessed_data, trained_set):\n",
-    "    \n",
+    "   \n",
     "    prior_prob, post_prob= trained_set[0], trained_set[1]\n",
     "    length= len(preprocessed_data)\n",
     "    predicted_class=[]\n",
@@ -152,20 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "92.33814779589038"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This function should evaliate the prediction performance by comparing your model’s class outputs to ground\n",
     "# truth labels\n",
@@ -192,28 +181,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "98.14020028612303\n",
-      "99.1506646971935\n",
-      "89.1891891891892\n",
-      "100.0\n",
-      "87.38425925925925\n",
-      "90.30864197530865\n",
-      "67.13286713286713\n"
+      "breast-cancer-wisconsin.data      98.14020028612303\n",
+      "mushroom.data      99.1506646971935\n",
+      "lymphography.data      89.1891891891892\n",
+      "wine.data      100.0\n",
+      "car.data      87.38425925925925\n",
+      "nursery.data      90.30864197530865\n",
+      "somerville.data      67.13286713286713\n",
+      "adult.data      93.78704585240011\n",
+      "bank.data      92.33814779589038\n",
+      "university.data      93.10344827586206\n",
+      "wdbc.data      100.0\n"
      ]
     }
    ],
    "source": [
     "list_datasets=[[\"breast-cancer-wisconsin.data\",11,1],[\"mushroom.data\",1,\"none\"],[\"lymphography.data\",1,\"none\"],\n",
     "               [\"wine.data\",1,\"none\"],[\"car.data\",7,\"none\"],[\"nursery.data\",9,\"none\"],[\"somerville.data\",1,\"none\"],\n",
-    "               [\"adult.data\",15,\"none\"],[\"bank.data\",15,\"none\"],[\"university.data\",1,1]]\n",
+    "               [\"adult.data\",15,\"none\"],[\"bank.data\",15,\"none\"],[\"university.data\",14,0],[\"wdbc.data\",2,0]]\n",
     "\n",
     "for a in range(len(list_datasets)):\n",
-    "    print(evaluate(list_datasets[a][0],list_datasets[a][1],list_datasets[a][2]))\n",
+    "    print(str(list_datasets[a][0])+'      '+str(evaluate(list_datasets[a][0],list_datasets[a][1],list_datasets[a][2])))\n",
     "    "
    ]
   },
@@ -243,12 +243,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0  1  2  3  4  5  6  7  8   9  ... 21 22 23 24 25 26 27 28 29 30\n",
+      "0    3  1  3  2  6  5  4  4  6  10 ...  1  3  2  4  3  3  6  4  4  M\n",
+      "1    3  2  3  2  6  2  2  4  3  10 ...  2  3  2  4  0  1  3  3  4  M\n",
+      "2    3  2  3  2  6  2  2  4  6  10 ...  2  3  2  4  2  2  6  3  4  M\n",
+      "3    2  2  2  0  6  5  4  4  6  10 ...  2  1  0  8  4  3  6  6  4  M\n",
+      "4    3  1  3  2  6  2  2  4  3  10 ...  1  3  1  4  1  1  3  3  4  M\n",
+      "5    2  2  2  0  6  2  2  4  6  10 ...  2  2  0  4  2  2  3  3  4  M\n",
+      "6    3  2  3  2  6  2  2  4  3  10 ...  2  3  1  4  1  1  3  3  4  M\n",
+      "7    2  2  2  1  6  2  2  4  6  10 ...  2  2  1  4  1  1  3  3  4  M\n",
+      "8    2  2  2  1  6  2  2  4  6  10 ...  3  2  0  4  2  2  6  4  4  M\n",
+      "9    2  3  2  0  6  5  4  4  6  10 ...  4  1  0  4  5  4  6  4  9  M\n",
+      "10   2  2  2  1  6  2  2  4  3  10 ...  3  2  1  4  0  0  3  3  4  M\n",
+      "11   2  2  2  1  6  2  2  4  3  10 ...  2  2  1  4  2  1  3  3  4  M\n",
+      "12   3  3  3  2  6  5  4  4  6  10 ...  3  3  1  4  1  1  3  3  4  M\n",
+      "13   2  3  2  1  6  2  2  4  3  10 ...  2  2  1  4  0  1  3  3  4  M\n",
+      "14   2  2  2  1  6  5  4  4  6  10 ...  3  2  0  4  3  3  6  3  4  M\n",
+      "15   2  3  2  1  6  2  2  4  6  10 ...  3  2  1  4  3  3  3  4  4  M\n",
+      "16   2  2  2  1  6  2  2  4  3  10 ...  3  2  1  4  0  1  3  3  4  M\n",
+      "17   2  2  2  1  6  5  2  4  6  10 ...  3  2  1  4  2  2  6  3  4  M\n",
+      "18   3  2  3  2  6  2  2  4  3  10 ...  3  3  2  4  1  2  6  3  4  M\n",
+      "19   2  1  2  1  6  2  2  4  3  10 ...  1  1  0  4  0  1  3  3  4  B\n",
+      "20   2  2  2  1  6  2  2  4  3  10 ...  2  1  0  4  1  0  3  3  4  B\n",
+      "21   1  1  1  0  6  2  2  4  3  10 ...  1  1  0  4  0  0  3  3  4  B\n",
+      "22   2  1  2  1  6  5  4  4  6  10 ...  1  2  1  4  2  3  6  4  4  M\n",
+      "23   3  2  3  2  6  2  2  4  3  10 ...  3  3  3  4  1  1  6  3  4  M\n",
+      "24   2  2  2  1  6  2  2  4  3  10 ...  3  3  2  4  1  2  6  3  4  M\n",
+      "25   3  2  3  1  6  5  4  4  6  10 ...  2  3  1  4  1  1  6  4  4  M\n",
+      "26   2  2  2  1  6  2  2  4  6  10 ...  3  2  1  4  3  2  6  4  4  M\n",
+      "27   3  2  3  2  6  2  2  4  3  10 ...  2  2  1  4  1  1  3  3  4  M\n",
+      "28   2  3  2  1  6  2  2  4  3  10 ...  3  2  1  4  3  3  6  4  4  M\n",
+      "29   3  1  3  1  6  2  2  4  3  10 ...  1  2  1  4  1  1  3  3  4  M\n",
+      "..  .. .. .. .. .. .. .. .. ..  .. ... .. .. .. .. .. .. .. .. .. ..\n",
+      "539  1  3  1  0  6  2  2  4  6  10 ...  3  1  0  4  1  1  3  3  4  B\n",
+      "540  2  1  1  0  6  2  2  4  3  10 ...  1  1  0  4  1  0  3  3  4  B\n",
+      "541  2  3  2  1  6  2  2  4  3  10 ...  3  2  0  4  2  2  3  3  4  B\n",
+      "542  2  3  2  1  6  2  2  4  3  10 ...  3  2  0  4  0  0  3  3  4  B\n",
+      "543  2  3  2  1  6  2  2  4  3  10 ...  3  1  0  4  0  0  3  3  4  B\n",
+      "544  2  2  2  1  6  2  2  4  3  10 ...  2  1  0  4  1  0  3  3  4  B\n",
+      "545  2  2  2  1  6  2  2  4  3  10 ...  2  1  0  4  0  0  3  3  4  B\n",
+      "546  1  2  1  0  6  2  2  4  3  10 ...  2  1  0  4  0  0  3  3  4  B\n",
+      "547  1  2  1  0  6  2  2  4  3  10 ...  2  1  0  4  1  0  3  3  4  B\n",
+      "548  1  2  1  0  6  2  2  4  3  10 ...  2  1  0  4  0  0  3  3  4  B\n",
+      "549  1  3  1  0  6  2  2  4  3  10 ...  3  1  0  4  0  0  3  3  4  B\n",
+      "550  1  2  1  0  6  2  0  0  3  10 ...  2  1  0  4  0  0  0  3  4  B\n",
+      "551  1  2  1  0  6  2  2  4  6  10 ...  2  1  0  4  0  0  3  3  4  B\n",
+      "552  2  3  2  1  6  2  2  4  3  10 ...  3  1  0  4  0  0  3  3  4  B\n",
+      "553  1  2  1  0  6  2  2  4  3  10 ...  2  1  0  4  0  0  3  3  4  B\n",
+      "554  2  3  2  1  6  2  2  4  3  10 ...  3  1  0  4  0  1  3  3  4  B\n",
+      "555  1  3  1  0  6  2  2  4  3  10 ...  3  1  0  4  0  0  3  3  4  B\n",
+      "556  1  2  1  0  6  2  2  4  3  10 ...  2  1  0  4  0  0  3  3  4  B\n",
+      "557  1  3  1  0  6  2  0  0  3  10 ...  3  1  0  4  0  0  0  3  4  B\n",
+      "558  2  2  2  1  6  2  2  4  3  10 ...  2  2  0  4  1  1  3  3  4  B\n",
+      "559  2  3  1  0  6  2  2  4  3  10 ...  3  1  0  4  1  1  3  3  4  B\n",
+      "560  2  3  2  1  6  2  2  4  3  10 ...  3  1  0  4  1  0  3  3  4  B\n",
+      "561  1  3  1  0  6  2  0  0  3  10 ...  3  1  0  4  0  0  0  1  4  B\n",
+      "562  2  3  2  1  6  5  4  4  6  10 ...  4  2  1  4  3  4  6  4  4  M\n",
+      "563  3  3  3  2  6  5  4  4  6  10 ...  2  3  2  4  2  3  6  3  4  M\n",
+      "564  3  2  3  2  6  2  4  4  3  10 ...  2  3  2  4  1  2  6  3  4  M\n",
+      "565  3  3  3  2  6  2  2  4  3  10 ...  3  3  2  4  0  1  3  3  4  M\n",
+      "566  2  3  2  1  6  2  2  4  3  10 ...  3  2  1  4  1  1  3  3  4  M\n",
+      "567  3  3  3  2  6  5  4  4  6  10 ...  3  3  2  4  4  3  6  4  4  M\n",
+      "568  1  3  1  0  6  2  0  0  3  10 ...  3  1  0  4  0  0  0  3  4  B\n",
+      "\n",
+      "[569 rows x 31 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pandas import DataFrame\n",
+    "import math\n",
+    "import pandas\n",
+    "df=preprocess(\"wdbc.data\",2,0)\n",
+    "df= DataFrame(df)\n",
+    "\n",
+    "classes= df[30]\n",
+    "for i in range(30):\n",
+    "    k=0\n",
+    "    k=df[i].astype(float).max()\n",
+    "    for j in range(569):\n",
+    "        df[i][j]= math.floor(math.ceil(float(df[i][j]) * 5) / k)\n",
+    "print (df)\n",
+    "df.to_csv(r'C:\\Users\\ANEESH CHATTARAJ\\Desktop\\comp30027\\2020\\assignment1_2020_datasets\\Name11.data', index = False)\n",
+    "\n",
+    "evaluate('Name11.data',30,\"none\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0  1  2  3  4  5  6  7  8  9  10 11 12 13\n",
+      "0    4  1  4  2  3  3  3  3  3  2  3  5  3  1\n",
+      "1    4  1  3  1  3  3  2  3  1  1  3  4  3  1\n",
+      "2    4  2  4  3  3  3  3  3  4  2  3  4  3  1\n",
+      "3    4  1  4  2  3  5  3  3  3  3  2  4  4  1\n",
+      "4    4  2  4  3  3  3  2  3  2  1  3  3  2  1\n",
+      "5    4  1  4  2  3  4  3  3  2  2  3  3  4  1\n",
+      "6    4  1  4  2  2  3  2  3  2  2  3  4  3  1\n",
+      "7    4  1  4  2  3  3  2  3  1  2  3  4  3  1\n",
+      "8    5  1  3  2  2  3  2  3  2  2  3  3  3  1\n",
+      "9    4  1  3  2  3  3  3  3  2  2  3  4  3  1\n",
+      "10   4  1  3  3  3  3  3  3  3  2  4  4  4  1\n",
+      "11   4  1  3  2  2  2  2  3  2  1  3  3  3  1\n",
+      "12   4  1  4  2  2  3  2  3  2  2  3  3  3  1\n",
+      "13   4  1  3  1  2  4  3  4  4  2  4  3  3  1\n",
+      "14   4  1  3  2  3  4  3  3  4  2  3  3  4  1\n",
+      "15   4  1  4  2  3  3  2  3  2  2  4  3  3  1\n",
+      "16   4  1  4  3  3  3  3  3  2  2  3  3  3  1\n",
+      "17   4  1  4  3  3  3  3  3  2  2  3  3  3  1\n",
+      "18   4  1  4  2  3  4  3  3  2  3  4  3  5  1\n",
+      "19   4  2  4  2  3  3  3  1  2  2  2  4  2  1\n",
+      "20   4  1  3  2  3  3  3  3  3  2  3  4  2  1\n",
+      "21   4  3  4  3  3  3  2  3  2  1  3  4  2  1\n",
+      "22   4  1  3  2  3  3  2  3  2  1  3  5  3  1\n",
+      "23   4  1  4  2  2  3  2  3  2  1  3  4  3  1\n",
+      "24   4  1  4  3  2  3  2  3  2  1  3  5  2  1\n",
+      "25   4  1  5  4  3  3  2  4  2  1  3  4  2  1\n",
+      "26   4  1  4  2  2  3  2  3  2  1  2  4  3  1\n",
+      "27   4  1  3  2  2  3  2  3  1  1  3  3  3  1\n",
+      "28   4  1  4  3  3  3  2  3  2  1  4  4  2  1\n",
+      "29   4  1  3  2  2  3  2  3  2  1  3  4  3  1\n",
+      "..  .. .. .. .. .. .. .. .. .. .. .. .. .. ..\n",
+      "148  4  2  3  3  2  2  0  4  1  3  1  2  1  3\n",
+      "149  4  3  3  3  3  2  1  3  1  3  1  1  1  3\n",
+      "150  4  2  4  4  3  1  1  3  1  3  1  1  1  3\n",
+      "151  4  2  4  3  3  2  1  3  1  4  1  2  1  3\n",
+      "152  4  1  4  4  3  2  1  3  2  2  2  1  1  3\n",
+      "153  4  2  3  3  3  2  0  6  2  4  1  2  2  3\n",
+      "154  4  1  3  3  3  2  0  4  1  2  1  2  1  3\n",
+      "155  4  4  3  3  2  2  0  6  2  3  1  2  2  3\n",
+      "156  4  3  3  3  2  2  0  4  2  3  1  2  1  3\n",
+      "157  4  2  4  4  2  2  0  6  1  2  2  2  2  3\n",
+      "158  4  1  4  4  3  3  1  4  3  5  1  2  1  3\n",
+      "159  4  1  4  3  2  3  1  4  3  4  1  2  1  3\n",
+      "160  4  3  3  3  2  3  0  4  1  3  1  2  1  3\n",
+      "161  4  2  4  3  3  2  0  4  1  2  2  2  2  3\n",
+      "162  4  2  4  3  3  2  0  4  1  2  2  2  1  3\n",
+      "163  4  3  3  3  3  1  0  3  1  2  2  2  2  3\n",
+      "164  4  2  3  3  2  1  0  4  1  3  2  2  1  3\n",
+      "165  4  3  3  3  2  1  0  4  1  2  2  2  1  3\n",
+      "166  4  3  4  3  3  2  0  4  2  4  2  2  2  3\n",
+      "167  4  2  3  3  2  2  0  3  1  4  2  2  2  3\n",
+      "168  4  2  4  4  3  2  0  3  2  3  2  2  2  3\n",
+      "169  4  3  4  4  3  2  0  3  1  3  2  2  1  3\n",
+      "170  4  2  3  3  2  1  0  3  1  2  2  2  1  3\n",
+      "171  4  2  3  3  2  1  0  4  1  3  1  2  1  3\n",
+      "172  4  2  4  3  2  2  0  4  1  3  2  2  1  3\n",
+      "173  4  5  4  3  2  2  0  4  1  3  2  2  2  3\n",
+      "174  4  3  4  3  3  2  0  4  2  2  2  2  2  3\n",
+      "175  4  3  3  3  3  2  0  4  1  3  1  2  2  3\n",
+      "176  4  2  3  3  3  2  0  4  2  3  1  2  2  3\n",
+      "177  4  3  4  4  2  2  0  4  1  3  2  2  1  3\n",
+      "\n",
+      "[178 rows x 14 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "96.64804469273743"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=preprocess(\"wine.data\",1,\"none\")\n",
+    "df= DataFrame(df)\n",
+    "\n",
+    "classes= df[0]\n",
+    "for i in range(13):\n",
+    "    k=0\n",
+    "    k=df[i].astype(float).max()\n",
+    "    for j in range(178):\n",
+    "        df[i][j]= math.floor(math.ceil(float(df[i][j]) * 5) / k)\n",
+    "print (df)\n",
+    "df.to_csv(r'C:\\Users\\ANEESH CHATTARAJ\\Desktop\\comp30027\\2020\\assignment1_2020_datasets\\Name111.data', index = False)\n",
+    "evaluate('Name111.data',14,\"none\")\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,12 +461,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6274165202108963\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zero_rule_algorithm_classification(train, test):\n",
+    "    output_values = [row[-1] for row in train]\n",
+    "    prediction = max(set(output_values), key=output_values.count)\n",
+    "    predicted = [prediction for i in range(len(test))]\n",
+    "    return predicted\n",
+    "df=preprocess(\"wdbc.data\",2,0)\n",
+    "\n",
+    "total=0\n",
+    "k=zero_rule_algorithm_classification(df,df)\n",
+    "output_values = [row[-1] for row in df]\n",
+    "\n",
+    "for a in range(len(df)):\n",
+    "      \n",
+    "        if  k[a]== output_values[a]:\n",
+    "            total=total+1\n",
+    "        accuracy= total/len(df)\n",
+    "print(accuracy)\n"
+   ]
   },
   {
    "cell_type": "markdown",
